; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_24972.c_fgfsflush.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_24972.c_fgfsflush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"IGNORE: \09<%s>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fgfsflush(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  br label %4

4:                                                ; preds = %8, %1
  %5 = load i32, i32* %2, align 4
  %6 = call i8* @fgfsread(i32 %5, i32 0)
  store i8* %6, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %9)
  br label %4

11:                                               ; preds = %4
  ret void
}

declare dso_local i8* @fgfsread(i32, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
